[tool.poetry]
name = "circleci-inspector"
version = "0.1.0"
description = ""
authors = ["Tom Forbes <tom@tomforb.es>"]
readme = "README.md"
packages = [{include = "circleci_inspector"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
httpx = {extras = ["http2"], version = "^0.24.0"}
tqdm = "^4.65.0"
aiostream = "^0.4.5"
orjson = "^3.8.10"
click = "^8.1.3"
tenacity = "^8.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.scripts]
dump-circleci = 'circleci_inspector.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
